--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
-    <head>
-        <title>Tugboat Test Page</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
-    </head>
-    <body>
-        <img src="logo.svg" alt="Tugboat Logo">
-    </body>
+  <head>
+    <title>Tugboat Test Page</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <h1>hello</h1>
+    <img src="logo.svg" alt="Tugboat Logo" />
+  </body>
 </html>
