add some text and up the threshold

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <html>
-    <head>
-        <title>Tugboat Test Page</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
-    </head>
-    <body>
-        <img src="logo.svg" alt="Tugboat Logo">
-    </body>
+  <head>
+    <title>Tugboat Test Page</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <img src="logo.svg" alt="Tugboat Logo" />
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis sed
+      quos eaque corrupti ad commodi aspernatur maiores ullam placeat debitis,
+      consequuntur dolor fugiat itaque eum ducimus numquam molestias non
+      quibusdam?
+    </p>
+    <img src="logo.svg" alt="Tugboat Logo" />
+  </body>
 </html>
