--- a/index.html
+++ b/index.html
@@ -1,9 +1,255 @@
 <html>
-    <head>
-        <title>Tugboat Test Page</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
-    </head>
-    <body>
-        <img src="logo.svg" alt="Tugboat Logo">
-    </body>
+  <head>
+    <title>Tugboat Test Page</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, quia
+      dolorem quaerat quae alias repudiandae eaque similique odio provident
+      fugiat ab corrupti impedit incidunt. Eos doloremque deleniti quasi dolores
+      unde dignissimos amet. Nulla in sunt dolorum magnam autem, hic
+      perspiciatis eius quia. Eligendi dolore itaque qui minima aspernatur rerum
+      vel quam sint tempora reprehenderit pariatur quae voluptatum sed id at
+      nulla voluptate, aut ea nostrum odit dolor repellat iste quis dolorum.
+      Ipsum quam amet ut! Quaerat deleniti at soluta amet ea sapiente dolor?
+      Earum ipsa accusamus excepturi odit sapiente, quae autem illo nemo
+      corporis consequatur id. Architecto voluptate qui beatae! Lorem ipsum
+      dolor sit amet consectetur, adipisicing elit. Alias labore blanditiis
+      harum quasi aperiam recusandae natus nam obcaecati, aliquam explicabo in
+      molestiae fugit nesciunt, sunt commodi necessitatibus earum architecto,
+      iusto molestias repellendus quia officia totam? Corporis, quis quasi.
+      Cupiditate laboriosam quae nostrum id sit. Perspiciatis similique
+      laboriosam cupiditate ullam, quasi placeat quos ipsum et vitae, beatae
+      numquam mollitia sed iusto illum harum, unde expedita quo eius. Accusamus
+      libero ducimus aspernatur veniam quod officia aliquam blanditiis deserunt
+      suscipit non consequuntur repellat iure, corrupti voluptates fuga. Nihil
+      facere ad, in voluptas exercitationem maxime natus reiciendis repellendus
+      eveniet animi non, fuga magnam adipisci sequi quia totam impedit corporis?
+      Inventore quia, tempora qui ab exercitationem officia! Nostrum, nesciunt.
+      Fuga doloribus, enim architecto cumque repudiandae tempore eveniet saepe
+      voluptatibus optio sunt, vero accusantium ad atque nostrum repellat
+      aperiam iste omnis, iure quisquam culpa impedit? Sint distinctio beatae
+      inventore ex, molestias nesciunt eius unde repellat impedit eos? Aliquam,
+      accusamus! Dolorem iste quasi illum molestias repellendus recusandae
+      similique vero blanditiis quas sequi. Minima sed voluptatibus blanditiis
+      quibusdam expedita, commodi illum vero eum rerum, consequatur facilis
+      aliquam debitis repellat provident odio fugit dolorum maxime quaerat
+      placeat temporibus unde eius deserunt sequi quos! Impedit nam asperiores
+      amet deleniti iusto rem aperiam odio. Veritatis voluptatibus doloremque a
+      numquam tenetur, eius quaerat similique aperiam ex voluptas eos,
+      blanditiis laboriosam atque nesciunt in autem ducimus aliquam maiores
+      exercitationem, pariatur deserunt beatae iusto fugit! Harum vel, alias sed
+      fuga ad deserunt eaque, ut, officia dolorum optio ipsa. Nobis libero sint
+      fuga quas nisi? Quasi ipsa nesciunt fugit maiores atque, maxime architecto
+      iusto earum nisi molestias quidem harum et sint autem eos fuga neque
+      consequatur libero quibusdam eveniet esse! Alias magni, dolorem
+      consequatur perferendis eos architecto velit unde libero ullam commodi
+      nesciunt minus aliquid tempora ea delectus facilis itaque? Maxime dolore
+      unde iste soluta id beatae quod veniam. Deserunt soluta, odio ullam
+      magnam, a saepe quod dolorum laboriosam eveniet, inventore ea! Voluptate,
+      recusandae voluptas atque beatae rerum eveniet quia corporis, enim
+      repudiandae libero ea placeat aliquid sapiente molestiae saepe delectus
+      maiores aut officiis corrupti optio deserunt. Ipsam rerum eum porro
+      dolorem quidem molestias quod sapiente pariatur magni totam nihil ut
+      deserunt mollitia placeat voluptatum voluptatem, aperiam neque iste
+      explicabo autem repellat facilis a ipsa! Non tenetur odio perspiciatis at
+      dolores earum, ad ex provident vel eaque iste tempora, explicabo
+      doloribus! Aliquam, repudiandae neque, vitae doloremque sapiente nobis
+      vero velit nisi sunt reiciendis quisquam natus temporibus ullam dicta
+      amet, excepturi rem eligendi odio earum quia ducimus voluptate nemo? Aut,
+      asperiores eos cumque dolorem aspernatur exercitationem quidem ratione.
+      Repudiandae voluptate ut officia hic nam, laudantium in velit fuga ipsam
+      eos sit aliquam facere fugit illo iste, excepturi ea beatae omnis
+      cupiditate, voluptas architecto voluptates. Vitae, laborum provident!
+      Expedita maxime totam doloribus nostrum ipsam eligendi eos ex, dignissimos
+      inventore veniam quisquam cupiditate sapiente fugiat molestiae tempora
+      nulla, cum ratione fugit reiciendis veritatis aspernatur! Hic voluptatibus
+      quas impedit est voluptas neque eum temporibus sunt cumque, aliquid,
+      expedita iusto velit commodi, magnam veritatis ad architecto minima.
+      Fugiat ab dolor quam reiciendis sint laboriosam corporis debitis,
+      assumenda amet minus at ea quae pariatur nulla, nisi nesciunt quo
+      voluptate rerum. Saepe accusantium vel voluptate nam quam beatae iste
+      accusamus adipisci commodi numquam praesentium incidunt illum sed tempore,
+      doloremque quis exercitationem laborum eum aliquam quod quo neque et?
+      Incidunt neque odit aspernatur velit, rem debitis sit laudantium
+      reprehenderit ipsum, dicta numquam ullam quibusdam cum cumque, error quae
+      repellat saepe molestias! Et molestiae iusto, neque possimus dolor sint
+      recusandae nihil necessitatibus repellendus ullam quia earum ipsa impedit
+      enim magni perspiciatis cupiditate illo amet fugiat. Sapiente sint
+      incidunt enim nostrum expedita, fugit ipsa sequi adipisci aspernatur nisi
+      labore dolores laudantium! Explicabo exercitationem quo accusamus,
+      accusantium unde ut fugit vero nihil quae quod dolores! Dolor soluta
+      adipisci nihil quasi placeat perspiciatis cupiditate quas amet doloremque
+      corporis a sint autem, molestias aliquid consequatur ducimus aut, magnam
+      enim explicabo odio deserunt debitis asperiores! Vero, officiis aut, sunt
+      harum iusto veritatis cupiditate quis consectetur assumenda atque minima
+      velit maiores, perferendis minus necessitatibus eveniet ullam eius quas
+      eum nobis laboriosam veniam repellat ipsa? Repellat fugit debitis at,
+      beatae facere quaerat ipsum exercitationem quasi animi sint porro
+      assumenda, consequatur praesentium molestiae deserunt numquam possimus ab
+      suscipit reprehenderit error? Sapiente optio exercitationem minima
+      molestias omnis rerum nisi. Eos rerum itaque necessitatibus voluptate
+      dolorum quasi est tempore, cumque, quaerat ab, hic doloremque quod
+      corporis quas! Velit quae magni veritatis adipisci officia perferendis
+      nesciunt totam sapiente. Tempore ullam delectus voluptatem, eos excepturi
+      quibusdam deserunt ut, possimus doloribus vero quod repellendus aspernatur
+      velit nostrum reiciendis, animi similique voluptatum ipsum. Sequi ab
+      mollitia perferendis provident laudantium! Corporis pariatur fuga dolore
+      sint fugiat facere nostrum perferendis autem magnam, at dicta numquam
+      optio suscipit a quas officia reprehenderit laudantium soluta ipsum nobis
+      amet blanditiis! Odit corrupti repellendus dolores, quis est soluta sequi
+      doloremque molestias nam odio ex animi quod minima reiciendis sed
+      aspernatur dolore at magni ullam quaerat accusamus voluptatem eius illo.
+      Possimus, ipsa labore cum unde exercitationem atque nulla, laborum enim id
+      illum quod? Aliquid, aliquam qui deserunt hic et adipisci nam earum,
+      placeat autem eum dolorum labore voluptates, alias illo quo laudantium
+      corporis facilis quibusdam veritatis eveniet beatae. Minus ipsa
+      perferendis maxime dolorem, ad fuga rem necessitatibus ipsum. Deleniti
+      deserunt itaque placeat rerum dicta expedita, adipisci sit accusantium
+      ducimus distinctio eligendi eos optio odit libero. A voluptatem iste aut
+      minima vero aliquid est commodi dolorum quasi ea amet id mollitia
+      consectetur dolores tempora assumenda, nemo laboriosam? Enim, nihil dolore
+      corporis fuga explicabo minima id voluptate quae doloribus placeat ipsa
+      aliquam facere, nemo optio et ullam! Id, earum atque impedit ipsa quam
+      placeat perspiciatis sint odit nobis velit dolorem error cupiditate
+      tempore quis doloremque eligendi voluptatibus deserunt magnam quisquam
+      ducimus dolor autem eius quia exercitationem. Ab officiis fugiat neque
+      ullam tempore incidunt quisquam inventore doloribus necessitatibus
+      expedita, natus minus, veritatis recusandae, quam dolorum quae? Ducimus,
+      expedita consequatur? Expedita libero pariatur eum adipisci? In facilis
+      magnam labore eaque consequatur consectetur voluptas laboriosam impedit
+      unde ipsam explicabo reiciendis cum enim rerum, officia quae adipisci quos
+      praesentium assumenda totam?
+    </p>
+    <img
+      src="logo.svg"
+      alt="Tugboat Logo"
+      loading="lazy"
+      height="200"
+      width="400"
+    />
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab perferendis,
+      illum vero enim odit mollitia harum labore ea similique eos! Minus sint
+      voluptatibus blanditiis itaque facere praesentium tempore, incidunt et
+      assumenda ullam doloribus similique, ratione nihil provident harum?
+      Dolorem praesentium tempore commodi incidunt soluta beatae necessitatibus
+      veniam, ipsa mollitia maiores pariatur eligendi numquam vero. Similique
+      placeat eveniet quis nihil, facilis, officia, quaerat cupiditate eligendi
+      consectetur atque impedit distinctio unde sit veritatis. Architecto sed
+      earum atque autem facilis voluptatem laudantium dolor consectetur
+      voluptatibus cupiditate ipsa, similique ad fuga. Nisi neque deleniti
+      corrupti vel culpa eum amet aliquid dignissimos aut. Sunt iusto natus
+      asperiores aliquid voluptate deleniti vel vero possimus dolorem reiciendis
+      aut at similique hic ab facilis velit eveniet doloremque, voluptates
+      delectus ratione illum eos. Sit voluptate eaque, numquam expedita impedit
+      totam? Molestias esse in fugiat, quos doloremque ratione aperiam error
+      amet rerum, officia eius accusantium fuga beatae obcaecati dicta dolore
+      nam quas qui quia nulla nesciunt. Neque, recusandae possimus. Molestias
+      minus blanditiis illo odio soluta, dignissimos voluptates fugit sequi
+      inventore cupiditate voluptate exercitationem libero totam dolore ipsam,
+      facilis est ex? Laudantium expedita, cumque quaerat voluptatem libero
+      assumenda, ex officiis perspiciatis eligendi dolorum iste sapiente totam?
+      Nihil excepturi modi commodi dolorem nisi iusto fuga suscipit ratione
+      libero earum, est nulla nostrum et voluptatibus asperiores cumque ea
+      facilis explicabo eveniet voluptates eaque dignissimos aspernatur
+      provident! Magni similique enim commodi exercitationem, deleniti
+      accusantium! Cumque aperiam nemo quae architecto maiores corporis
+      temporibus unde voluptatibus. Esse numquam laboriosam, voluptate
+      temporibus veritatis, nesciunt consectetur maiores quibusdam quasi, aut ut
+      aliquam! Omnis voluptate, ab ipsum eos alias accusamus aut quidem
+      reiciendis sunt minima aspernatur atque quisquam laudantium deleniti
+      similique eligendi sit deserunt laborum eveniet sequi saepe perspiciatis
+      molestiae excepturi officia? Mollitia, dolor commodi. Quisquam quaerat at,
+      omnis dignissimos sapiente repellendus nobis vitae ad consequuntur modi
+      odio harum esse odit dicta commodi optio. Maxime sequi numquam quas qui ab
+      nam debitis corporis necessitatibus ex dicta aut nobis neque blanditiis
+      voluptates officiis dolor, at nihil provident! Fugiat aut aspernatur earum
+      vero dicta? Quasi, excepturi aliquid temporibus exercitationem fugit
+      explicabo eos quo repellendus dolores magnam itaque corporis, minima culpa
+      totam optio necessitatibus sed alias delectus eligendi ad expedita aut
+      esse ratione dolor. Exercitationem harum quia nobis, possimus maiores,
+      quaerat quam eligendi in ipsum eveniet nam, odio minus obcaecati aperiam
+      a? Mollitia incidunt excepturi eligendi quas exercitationem reprehenderit
+      aperiam magnam eveniet! Rem, deleniti? Dignissimos quo totam, a
+      reprehenderit iure quaerat ab unde architecto labore ratione ducimus vero
+      veniam sit ex tempore consectetur soluta dolorum molestias fugit
+      blanditiis accusantium voluptatibus laudantium ut laborum! Eius, non sint.
+      Nam impedit labore quis provident dicta velit quas at nostrum,
+      reprehenderit inventore molestiae? Blanditiis corporis iste odio? Quos
+      vitae neque laudantium totam explicabo hic, deleniti quis tempore odit, in
+      itaque recusandae accusamus excepturi nisi ipsam cupiditate voluptate
+      dignissimos voluptatum sequi quo labore aut, reiciendis quod ea! Error
+      exercitationem hic, optio soluta animi corporis consequuntur aperiam
+      cupiditate natus reprehenderit in maxime asperiores ad. Alias autem at
+      sint amet vel modi, nulla qui molestiae ea natus maiores, officiis ratione
+      repellat asperiores, ab quae? Vitae, nobis quo. Optio, nisi commodi
+      exercitationem nemo quibusdam perspiciatis facilis corrupti dolorem rerum
+      maxime qui aut quidem porro fugit nam debitis officia. Sequi tenetur
+      ratione eius, quasi impedit explicabo animi ea. Asperiores magni incidunt
+      nulla commodi, hic laboriosam odio, quam vel omnis explicabo sint
+      architecto vero eos natus maiores consequuntur deleniti blanditiis
+      expedita. Error, est magni sapiente veniam, aperiam possimus repellat
+      perferendis neque, sit facilis doloremque? Quod earum deserunt eveniet
+      obcaecati. Dicta praesentium eligendi harum ut accusantium, sapiente autem
+      dolore accusamus, cumque nulla veritatis hic saepe. Repudiandae vel iste
+      odio eum nulla. Nemo itaque commodi dolores cupiditate similique
+      voluptatibus repellat, voluptatem magnam alias necessitatibus autem soluta
+      qui temporibus cum nesciunt quibusdam modi natus. Recusandae error, iusto
+      non veniam quaerat nam dolorem alias quibusdam eos rerum atque eum impedit
+      deleniti perspiciatis iure omnis voluptates doloremque nisi quisquam quae?
+      Tenetur odit distinctio aliquam facere dolorum illum totam sit, optio
+      dolor similique, maiores accusantium, vel ab blanditiis ipsa asperiores.
+      Ea pariatur inventore aliquid deserunt ullam non fuga illum saepe
+      assumenda dignissimos necessitatibus nostrum esse dolorum vero porro sunt
+      sed molestias repudiandae excepturi velit reiciendis laboriosam, corrupti
+      maxime suscipit! Veniam est tempora non praesentium voluptates! Earum
+      distinctio delectus quam ullam, animi, ipsum accusantium inventore in a
+      at, fugiat laboriosam facere numquam. Nisi magnam laborum voluptas ex
+      fugiat reiciendis modi saepe iure autem dignissimos adipisci sequi
+      consequatur repellendus libero, sint molestias. Laboriosam dolorem earum
+      perferendis id dicta mollitia officiis nisi corporis, quibusdam cupiditate
+      expedita debitis! Repellat in nisi libero quae facilis officiis molestias
+      alias saepe, asperiores, voluptates obcaecati, sed reprehenderit quam
+      cupiditate iusto inventore ad esse eos reiciendis at? Aliquam voluptate
+      amet culpa aperiam veritatis possimus quos. Ipsa, cumque sit consequatur
+      culpa aliquid molestias ut quam, recusandae debitis rerum delectus et
+      quaerat. Aliquid autem animi hic praesentium! Unde modi iste cumque
+      debitis magnam. Saepe voluptas alias, labore quibusdam ullam quos
+      incidunt, accusamus eos ratione aliquid vero nulla reiciendis quisquam
+      distinctio molestias cupiditate similique id. Fugit deserunt cum
+      architecto amet recusandae et quas, blanditiis hic suscipit ex ipsam quod
+      provident fugiat aperiam exercitationem impedit perspiciatis tenetur eius
+      numquam. Dolorem aspernatur veniam mollitia? Corrupti adipisci error
+      voluptatibus id eveniet aliquid nisi earum velit cumque expedita illo,
+      sint voluptas porro, exercitationem, qui debitis. Ratione eveniet sed
+      obcaecati possimus officiis neque eligendi delectus corrupti. Minus,
+      saepe, dolore est magni cum nisi aspernatur voluptatem veniam ipsam ullam
+      praesentium perferendis! Minima, ipsum. Aliquam ullam ipsum delectus
+      ratione quidem nobis, quisquam iure veritatis harum, quod accusantium
+      iusto perferendis id nulla architecto, velit tempora molestiae. Alias
+      commodi veritatis tempora necessitatibus animi reprehenderit velit nobis
+      ad cum illo? Numquam esse saepe suscipit quibusdam reiciendis minus, fuga
+      neque modi cupiditate ex? Optio sint labore tempora cumque nam, nisi,
+      nobis vitae sed quam incidunt et architecto ea maiores culpa temporibus
+      quaerat explicabo omnis ducimus beatae iure perferendis magni totam magnam
+      nemo. Odit provident eligendi, a incidunt ea, ipsa dolore tenetur id porro
+      exercitationem beatae eum fugiat doloribus aperiam, accusamus vitae
+      consequuntur eaque obcaecati reprehenderit rerum temporibus maxime?
+      Debitis, dicta officiis.
+    </p>
+    <img
+      src="logo.svg"
+      alt="Tugboat Logo"
+      loading="lazy"
+      height="200"
+      width="400"
+    />
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero est,
+      nobis nulla at explicabo in illum asperiores tenetur iste quas animi qui
+      commodi voluptates architecto numquam harum error soluta laudantium!
+    </p>
+  </body>
 </html>
